--- a/form/main.css
+++ b/form/main.css
@@ -92,10 +92,13 @@ input[placeholder]
 .pic
 {
 	margin: none;
-	height: 100%;
-	width: 24%;
 	object-fit: contain;
 	display: inline;
+}
+
+#canvas
+{
+	display: none;
 }
 
 
