--- a/sendbox/main.css
+++ b/sendbox/main.css
@@ -2,10 +2,61 @@
 {
     font-family: comic sans-serif;
     background-attachment: fixed;
-	background-image			:url(../images/image0.jpeg);
+	/* background-image			:url(../images/image0.jpeg); */
     background-repeat: repeat;
     padding : none;
     margin : 0;
+    overflow-x: hidden;
+}
+
+.navbar
+{
+    background: #333;
+    padding : 15px;
+    height : 40px;
+    color : #fff;
+}
+
+.navbar h1{
+    margin:  0;
+    text-align: center;
+}
+
+.select
+{
+    height: 40px;
+    background: #333;
+    color : #fff;
+    padding: 3px;
+    width: 100%;
+    border:  1px #666 solid;
+    margin-bottom: 10px;
+}
+
+.top
+{
+    width: 500px;
+    margin:  30px auto;
+}
+
+.bottom
+{
+    max-width: 960px;
+    margin: auto;
+    padding: 10px;
+
+}
+#photos
+{
+    display: grid;
+    grid-template-columns: repeart(3, 1fr);
+    grid-gap: 10px;
+}
+
+#photos img
+{
+    width: 100%;
+    border: 3px #fff solid;
 }
 
 .form
