reset password done

--- a/form/main.css
+++ b/form/main.css
@@ -8,7 +8,7 @@
     margin : 0;
 }
 
-.form
+/* .form
 {
     display: block;
     width: 200px;
@@ -18,7 +18,7 @@
     background-color: rgba(7, 7, 7, 0.5);
     margin : auto;
     box-shadow: lightsteelblue;
-}
+} */
 
 .input
 {
